js script for burger menu, adaptive for header

--- a/www/selected-works.html
+++ b/www/selected-works.html
@@ -15,10 +15,10 @@
   <header class="header">
     <div class="header-container">
       <div class="header-wrap">
-        <a href="selected-works.html" class="header-logo" data-aos="fade-in" data-aos-duration="700" data-aos-easing="ease-out-quad">
+        <a href="selected-works.html" class="header-logo">
           Farhad Sadykov
         </a>
-        <nav class="nav" data-aos="fade-in" data-aos-duration="700" data-aos-easing="ease-out-quad">
+        <nav class="nav js-nav">
           <ul class="nav-menu">
             <li class="nav-menu-item">
               <a class="nav-menu-link" href="selected-works.html">
@@ -84,7 +84,7 @@
             </li>
           </ul>
         </nav>
-        <!-- <button class="header-burger"></button> -->
+        <button class="header-burger js-header-burger"></button>
       </div>
     </div>
   </header>
