--- a/www/lost-in-turkey.html
+++ b/www/lost-in-turkey.html
@@ -15,10 +15,11 @@
   <header class="header">
     <div class="header-container">
       <div class="header-wrap">
+        <div class="header-empty-box"></div>
         <a href="selected-works.html" class="header-logo">
           Farhad Sadykov
         </a>
-        <nav class="nav">
+        <nav class="nav js-nav">
           <ul class="nav-menu">
             <li class="nav-menu-item">
               <a class="nav-menu-link" href="selected-works.html">
@@ -84,7 +85,7 @@
             </li>
           </ul>
         </nav>
-        <!-- <button class="header-burger"></button> -->
+        <button class="header-burger js-header-burger"></button>
       </div>
     </div>
   </header>
