--- a/www/selected-works.html
+++ b/www/selected-works.html
@@ -15,6 +15,7 @@
   <header class="header">
     <div class="header-container">
       <div class="header-wrap">
+        <div class="header-empty-box"></div>
         <a href="selected-works.html" class="header-logo">
           Farhad Sadykov
         </a>
