added ::selecrion for all text, added new podcast link, added link to dev website

--- a/www/better-days.html
+++ b/www/better-days.html
@@ -74,7 +74,7 @@
               </a>
             </li>
             <li class="nav-menu-item">
-              <a class="nav-menu-link" href="https://moderncolor.ru/category/podcast/" target="_blank" rel="noopener noreferrer">
+              <a class="nav-menu-link" href="https://podcast.moderncolor.ru" target="_blank" rel="noopener noreferrer">
                 Podcast
               </a>
             </li>
