--- a/www/exhibitions.html
+++ b/www/exhibitions.html
@@ -74,7 +74,7 @@
               </a>
             </li>
             <li class="nav-menu-item">
-              <a class="nav-menu-link" href="https://moderncolor.ru/category/podcast/" target="_blank" rel="noopener noreferrer">
+              <a class="nav-menu-link" href="https://podcast.moderncolor.ru" target="_blank" rel="noopener noreferrer">
                 Podcast
               </a>
             </li>
@@ -100,56 +100,56 @@
         </h2>
         <div data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-out-quad">
           <p class="exhibitions-text">
-            <strong>2023</strong> —
+            <b>2023</b> —
             <a href="https://vk.com/wall711598374_439" target="_blank" rel="noopener noreferrer" class="exhibitions-link">
               Minimalism: The Less Is The More</a>. Mayak Art Residence, Sakhalin.
           </p>
           <p class="exhibitions-text">
-            <strong>2020</strong> — Not An Accidental Witness vol. 2. Contemporary Art Center «Oblaka». Ufa, Bashkortostan.
+            <b>2020</b> — Not An Accidental Witness vol. 2. Contemporary Art Center «Oblaka». Ufa, Bashkortostan.
           </p>
           <p class="exhibitions-text">
-            <strong>2020</strong> — 15th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
+            <b>2020</b> — 15th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
           </p>
           <p class="exhibitions-text">
-             <strong>2019</strong> — 14th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
+             <b>2019</b> — 14th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
           </p>
           <p class="exhibitions-text">
-            <strong>2019</strong> —
+            <b>2019</b> —
             <a href="https://phodar.net" target="_blank" rel="noopener noreferrer" class="exhibitions-link">
               10th International Phodar Biennial</a>. «Metamorphoses» series. Central Railway Station. Sofia, Bulgaria.
           </p>
           <p class="exhibitions-text">
-            <strong>2019</strong> — Not An Accidental Witness vol. 2. Sakharov Center. Moscow, Russia.
+            <b>2019</b> — Not An Accidental Witness vol. 2. Sakharov Center. Moscow, Russia.
           </p>
           <p class="exhibitions-text">
-            <strong>2018</strong> — Not An Accidental Witness vol. 1. Human Rights House Foundation. Oslo, Norway.
+            <b>2018</b> — Not An Accidental Witness vol. 1. Human Rights House Foundation. Oslo, Norway.
           </p>
           <p class="exhibitions-text">
-            <strong>2018</strong> — Not An Accidental Witness vol. 2. Human Rights House. Voronezh, Russia.
+            <b>2018</b> — Not An Accidental Witness vol. 2. Human Rights House. Voronezh, Russia.
           </p>
           <p class="exhibitions-text">
-            <strong>2018</strong> — Not An Accidental Witness vol. 1. Art space «Gates». Kaliningrad, Russia.
+            <b>2018</b> — Not An Accidental Witness vol. 1. Art space «Gates». Kaliningrad, Russia.
           </p>
           <p class="exhibitions-text">
-            <strong>2018</strong> — St.Petersburg’s Landscape. Kliment Timiryazev Library. St.Petersburg, Russia.
+            <b>2018</b> — St.Petersburg’s Landscape. Kliment Timiryazev Library. St.Petersburg, Russia.
           </p>
           <p class="exhibitions-text">
-            <strong>2018</strong> — Not An Accidental Witness vol. 1. Open Space. St.Petersburg, Russia.
+            <b>2018</b> — Not An Accidental Witness vol. 1. Open Space. St.Petersburg, Russia.
           </p>
           <p class="exhibitions-text">
-            <strong>2017</strong> — 12th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
+            <b>2017</b> — 12th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
           </p>
           <p class="exhibitions-text">
-            <strong>2017</strong> — Not An Accidental Witness vol. 1. Human Rights House. Voronezh, Russia.
+            <b>2017</b> — Not An Accidental Witness vol. 1. Human Rights House. Voronezh, Russia.
           </p>
           <p class="exhibitions-text">
-            <strong>2017</strong> — Baltic Biennale of Photography. Kaliningrad Art Gallery. Kaliningrad, Russia.
+            <b>2017</b> — Baltic Biennale of Photography. Kaliningrad Art Gallery. Kaliningrad, Russia.
           </p>
           <p class="exhibitions-text">
-            <strong>2017</strong> — Lines and Graphics of St.Petersburg. Kliment Timiryazev Library. St.Petersburg, Russia.
+            <b>2017</b> — Lines and Graphics of St.Petersburg. Kliment Timiryazev Library. St.Petersburg, Russia.
           </p>
           <p class="exhibitions-text">
-            <strong>2017</strong> — The Hope International Photo Festival. Innovative Cultural Center. Kaluga, Russia.
+            <b>2017</b> — The Hope International Photo Festival. Innovative Cultural Center. Kaluga, Russia.
           </p>
         </div>
       </div>
