--- a/www/about.html
+++ b/www/about.html
@@ -74,7 +74,7 @@
               </a>
             </li>
             <li class="nav-menu-item">
-              <a class="nav-menu-link" href="https://moderncolor.ru/category/podcast/" target="_blank" rel="noopener noreferrer">
+              <a class="nav-menu-link" href="https://podcast.moderncolor.ru" target="_blank" rel="noopener noreferrer">
                 Podcast
               </a>
             </li>
@@ -144,6 +144,11 @@
               <p class="about-text">
                 Email //
                 <a href="mailto:purestate@yandex.ru" target="_blank" rel="noopener noreferrer" class="about-link">purestate@yandex.ru</a>
+              </p>
+              <p class="about-text">
+                My special
+                <a href="https://dev.everwave.ru/" target="_blank" rel="noopener noreferrer" class="about-link">dev website</a>
+                with social links.
               </p>
             </div>
             <div class="about-avatar">
