added flickr icon

--- a/www/about.html
+++ b/www/about.html
@@ -146,7 +146,7 @@
                 <a href="mailto:purestate@yandex.ru" target="_blank" rel="noopener noreferrer" class="about-link">purestate@yandex.ru</a>
               </p>
               <p class="about-text">
-                My special
+                His special
                 <a href="https://dev.everwave.ru/" target="_blank" rel="noopener noreferrer" class="about-link">dev website</a>
                 with social links.
               </p>
@@ -167,16 +167,24 @@
         </p>
         <ul class="social">
           <li class="social-item">
-           <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
-           </a>
-         </li>
-         <li class="social-item">
-           <a href="https://vk.com/fsadykov" style="background-image: url('../images/vk-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
-           </a>
+            <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank"
+              rel="noopener noreferrer" class="social-link">
+            </a>
           </li>
-         <li class="social-item">
-           <a href="https://x.com/_everwave" style="background-image: url('../images/x-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
-           </a>
+          <li class="social-item">
+            <a href="https://vk.com/fsadykov" style="background-image: url('../images/vk-icon.png');" target="_blank"
+              rel="noopener noreferrer" class="social-link">
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="https://x.com/_everwave" style="background-image: url('../images/x-icon.png');" target="_blank"
+              rel="noopener noreferrer" class="social-link">
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="https://www.flickr.com/fsadykov/" style="background-image: url('../images/flickr-icon.png');"
+              target="_blank" rel="noopener noreferrer" class="social-link">
+            </a>
           </li>
         </ul>
       </div>
