--- a/www/lost-in-turkey.html
+++ b/www/lost-in-turkey.html
@@ -156,16 +156,24 @@
         </p>
         <ul class="social">
           <li class="social-item">
-           <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
-           </a>
-         </li>
-         <li class="social-item">
-           <a href="https://vk.com/fsadykov" style="background-image: url('../images/vk-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
-           </a>
+            <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank"
+              rel="noopener noreferrer" class="social-link">
+            </a>
           </li>
-         <li class="social-item">
-           <a href="https://x.com/_everwave" style="background-image: url('../images/x-icon.png');" target="_blank" rel="noopener noreferrer" class="social-link">
-           </a>
+          <li class="social-item">
+            <a href="https://vk.com/fsadykov" style="background-image: url('../images/vk-icon.png');" target="_blank"
+              rel="noopener noreferrer" class="social-link">
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="https://x.com/_everwave" style="background-image: url('../images/x-icon.png');" target="_blank"
+              rel="noopener noreferrer" class="social-link">
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="https://www.flickr.com/fsadykov/" style="background-image: url('../images/flickr-icon.png');"
+              target="_blank" rel="noopener noreferrer" class="social-link">
+            </a>
           </li>
         </ul>
       </div>
