--- a/www/exhibitions.html
+++ b/www/exhibitions.html
@@ -95,6 +95,10 @@
         </h2>
         <div data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-out-quad">
           <p class="exhibitions-text">
+            <b>2024</b> —
+            The heart of St. Petersburg. The Russian Museum of Ethnography. St. Petersburg, Russia.
+          </p>
+          <p class="exhibitions-text">
             <b>2023</b> —
             <a href="https://vk.com/wall711598374_439" target="_blank" rel="noopener noreferrer" class="exhibitions-link">
               Minimalism: The Less Is The More</a>. Mayak Art Residence, Sakhalin.
