edited desc in grace page

--- a/www/grace.html
+++ b/www/grace.html
@@ -94,7 +94,7 @@
             Grace
           </h2>
           <p class="grace-desc" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
-            Apraksin Drov. Local market. April 2018.
+            Apraksin Dvor. Local market. April 2018.
           </p>
           <div class="grace-gallery">
             <a href="../images/grace/gr-img-1.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
