edited about page

--- a/www/about.html
+++ b/www/about.html
@@ -130,6 +130,10 @@
                     <a href="https://homeofsnooker.ru/" target="_blank" rel="noopener noreferrer" class="about-link">Home of Snooker</a>
                     — one of the biggest snooker media.
                   </li>
+                  <li class="about-item">
+                    <a href="https://epic.everwave.ru/" target="_blank" rel="noopener noreferrer" class="about-link">EPIC</a>
+                    — daily pictures of Planet Earth taken by Earth Polychromatic Imaging Camera(EPIC) onboard Deep Space Climate Observatory.
+                  </li>
                 </ul>
               </p>
               <p class="about-text">
