added the  new exhibition

--- a/www/exhibitions.html
+++ b/www/exhibitions.html
@@ -96,7 +96,7 @@
         <div data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-out-quad">
           <p class="exhibitions-text">
             <b>2024</b> —
-            The heart of St. Petersburg. The Russian Museum of Ethnography. St. Petersburg, Russia.
+            The Heart of St. Petersburg. The Tauride Garden. St. Petersburg, Russia.
           </p>
           <p class="exhibitions-text">
             <b>2023</b> —
