--- a/www/about.html
+++ b/www/about.html
@@ -145,9 +145,8 @@
                 <a href="mailto:purestate@yandex.ru" target="_blank" rel="noopener noreferrer" class="about-link">purestate@yandex.ru</a>
               </p>
               <p class="about-text">
-                His special
-                <a href="https://dev.everwave.ru/" target="_blank" rel="noopener noreferrer" class="about-link">dev website</a>
-                with social links.
+                <a href="https://hello.everwave.ru/" target="_blank" rel="noopener noreferrer" class="about-link">Website</a>
+                with social, dev portfolio and photography links.
               </p>
             </div>
             <div class="about-avatar">
