edited telegram link

--- a/www/lost-in-turkey.html
+++ b/www/lost-in-turkey.html
@@ -151,7 +151,7 @@
         </p>
         <ul class="social">
           <li class="social-item">
-            <a href="https://t.me/farhad" style="background-image: url('../images/telegram-icon.png');" target="_blank"
+            <a href="https://t.me/everwaveme" style="background-image: url('../images/telegram-icon.png');" target="_blank"
               rel="noopener noreferrer" class="social-link">
             </a>
           </li>
