added link to press page

--- a/www/press.html
+++ b/www/press.html
@@ -96,7 +96,8 @@
         <div data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-out-quad">
           <p class="press-text" >
             Interview for Progresso Fotografico Magazine. Milan, Italy // May 2020
-            (<a href="images/progresso-fotografico-tearsheats.pdf" target="_blank" rel="noopener noreferrer"class="press-link">Tearsheets</a>)
+            (<a href="images/progresso-fotografico-tearsheats.pdf" target="_blank" rel="noopener noreferrer"class="press-link">Tearsheets</a>,
+            <a href="https://telegra.ph/Interview-for-Progresso-Fotografico-Magazine-11-26" target="_blank" rel="noopener noreferrer"class="press-link">English version</a>)
           </p>
           <p class="press-text">
             Not An Accidental Witness vol. 2, 2018 (Print feature, Special prize)
